--- a/src/app/components/gestion-orden/gestion-orden.component.html
+++ b/src/app/components/gestion-orden/gestion-orden.component.html
@@ -941,7 +941,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let ordenes of facturasBuscarList">
+                  <tr *ngFor="let ordenes of facturasBuscarList" class="{{ordenes.nota_id!=null?'table-danger':''}}">
                     <th scope="row">
                       <button type="button" class="btn btn-secondary btn-sm" data-toggle="modal"
                         (click)="cargarFactura(ordenes)" title="Ver">
@@ -1015,22 +1015,7 @@
                     placeholder="Descripción corrección"></textarea>
                 </div>
               </div>
-              <div class="form-row">
-
-                <div class="form-group col-sm-8">
-                  Articulo
-                  <input list="articulos" name="articuloBuscar" #articuloBuscar placeholder="Articulo"
-                    class="form-control" id="articuloBuscar" (change)="articuloSelect(articuloBuscar) ">
-                </div>
-                <div class="form-group col-md-3 col-sm-1">
-                  Cantidad
-                  <input name="cantidadNota" #cantidadNota placeholder="Cantidad" class="form-control">
-                </div>
-                <div class="form-group col-md-1 col-sm-1">
-                  <button type="button" class="btn btn-primary mt-4" title="Adjuntar producto"
-                    (click)="adjuntarProducto(cantidadNota) "><i class="fas fa-plus"></i></button>
-                </div>
-              </div>
+             
               <div class="form-row">
                 <div class="form-group col-md-6 col-sm-1">
 
@@ -1039,38 +1024,7 @@
                   <button type="button" class="btn btn-secondary" (click)="cerrarNota()">Salir</button>
                 </div>
               </div>
-              <table class="table table-hover">
-                <thead>
-                  <tr>
-                    <th scope="col">Opciones</th>
-                    <th scope="col">Producto</th>
-                    <th scope="col">Cantidad</th>
-                    <th scope="col">Valor Uni.</th>
-                    <th scope="col">Valor Total</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let item of itemsFactura2">
-                    <th scope="row">
-                      <button type="button" id="d_{{item.documento_detalle_id}}" #borraR
-                        class="btn btn-secondary btn-sm" title="Eliminar Producto" (click)="borrarItem(borraR)">
-                        <i class="fas fa-trash"></i>
-                      </button>
-                    </th>
-                    <td>{{item.descripcion}}</td>
-                    <td><input name="cantidadNota" #cantidadNota placeholder="Cantidad" class="form-control"
-                        id="c_{{item.documento_detalle_id}}" (blur)="cambioCantidad(cantidadNota)"
-                        value="{{item.cantidad}}">
-                    </td>
-                    <td>
-                      <input name="unitarioNota" #unitarioNota placeholder="Unitario" class="form-control"
-                        id="u_{{item.documento_detalle_id}}" (blur)="cambioUnitario(unitarioNota)"
-                        value="{{item.unitario}}">
-                    </td>
-                    <td>{{formatearNumber(item.parcial)}}</td>
-                  </tr>
-                </tbody>
-              </table>
+            
             </div>
 
           </div>
