--- a/src/app/components/buscar-documentos/buscar-documentos.component.html
+++ b/src/app/components/buscar-documentos/buscar-documentos.component.html
@@ -196,6 +196,18 @@
 
             </div>
           </div>
+          <div class="form-row">
+            <div class="form-group col-md-8 col-sm-1"> 
+              <b>Tipos Pago: </b>
+            </div>
+           
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-12 col-sm-1" >
+              {{tipos}}
+            </div>
+          </div>
+
           Detalle Factura
           <table class="table table-hover">
             <thead>
