--- a/src/app/components/buscar-documentos/buscar-documentos.component.html
+++ b/src/app/components/buscar-documentos/buscar-documentos.component.html
@@ -117,7 +117,7 @@
                 <i class="far fa-trash-alt"></i>
               </button>
               <button type="button" class="btn btn-primary btn-sm" [disabled]="!cambioFechaActivo" title="Cambiar fecha"
-                data-toggle="modal" data-target="#buscarFacturaModal">
+                data-toggle="modal" data-target="#cambioFechaModal"  (click)="detalleDocumento(documento)">
                 <i class="fas fa-calendar-alt"></i>
               </button>
             </th>
@@ -230,6 +230,35 @@
               </tr>
             </tbody>
           </table>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" (click)="closeModal()">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal cambio fecha -->
+  <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" id="cambioFechaModal"
+    aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle">Cambio de fecha</h5>
+          <button type="button" class="close" (click)="closeModal()" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-row">
+            <div class="form-group col-md-4 col-sm-1">
+              <b>Fecha deseada: </b>
+            </div>
+            <div class="form-group col-md-8 col-sm-1">
+              <input class="form-control" type="date"  id="cambioFech" #cambioFech (change)="cambioFecha(cambioFech)">
+            </div>
+          </div>
+         
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" (click)="closeModal()">Cerrar</button>
