--- a/src/app/components/buscar-documentos/buscar-documentos.component.html
+++ b/src/app/components/buscar-documentos/buscar-documentos.component.html
@@ -80,6 +80,7 @@
         </div>
         <div class="form-group col-md-6 col-sm-1">
           <button type="button" class="btn btn-primary" (click)="buscarDocumentos()">Buscar</button>
+          <button type="button" class="btn btn-primary ml-1" (click)="exportTableToExcel(tblData)">Exportar </button>
           <button type="button" class="btn btn-secondary ml-1" data-dismiss="modal">Cerrar</button>
         </div>
       </div>
