--- a/src/app/cierres/cierres.component.html
+++ b/src/app/cierres/cierres.component.html
@@ -271,25 +271,79 @@
     </div>
 
   </div>
+  <div class="row">
+    <div class="col col-md-4 border border-primary">
+      <div class="row">
+        <div class="col col-md-12">
+          <h5>Ordenes de trabajo</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-md-6">
+          Orden sin gestionar:
+        </div>
+        <div class="col col-md-6">
+          {{formatearNumber(ordenesBuscarList.length)}}
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col col-md-6">
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#borrarOrdenes0">
+            Borrar OT en cero
+          </button>
+        </div>
+        <div class="col col-md-6">
+
+        </div>
+      </div>
+    </div>
+
+  </div>
 
   <!-- Modal confirmar cierre diario -->
-<div class="modal fade" id="confirmarCierreDiarioModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Confirmar Cierre Diario</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Al realizar el cierre diario todos los contadores se pondran en cero (0), esta seguro de realizar cierre diario?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-primary" (click)= "cierreDiario()">Confirmar</button>
+  <div class="modal fade" id="confirmarCierreDiarioModal" tabindex="-1" role="dialog"
+    aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Confirmar Cierre Diario</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Al realizar el cierre diario todos los contadores se pondran en cero (0), esta seguro de realizar cierre
+          diario?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-primary" (click)="cierreDiario()">Confirmar</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+  <div class="modal fade" id="borrarOrdenes0" tabindex="-1" role="dialog"
+    aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Borrar ordenes en cero</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Se borrarán todas las ordenes que estan en cero (0), esta seguro de realizar borrado?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-primary" (click)="borrarOrdenesEn0()">Confirmar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
