--- a/src/app/components/gestion-orden/gestion-orden.component.html
+++ b/src/app/components/gestion-orden/gestion-orden.component.html
@@ -150,6 +150,13 @@
         </div>
       </div>
       <div class="form-row">
+        <div class="form-group col-md-4 col-sm-12">
+          <input type="file" class="form-control-file" capture="camera" #fotoOrden id="fotoOrden" [disabled]="documento.impreso==1"
+          aria-describedby="fileHelp" (change)="cargarFotoOrden($event)">
+        </div>
+      </div>
+
+      <div class="form-row">
         <div class="form-group col-md-6 col-sm-6">
           <!-- Button trigger modal -->
           <button type="button" class="btn btn-primary" data-toggle="modal" [disabled]="documento.impreso==1"
